Ensure truncating text works in flex item children
See https://css-tricks.com/flexbox-truncated-text/.

--- a/src/app.css
+++ b/src/app.css
@@ -418,6 +418,7 @@ fieldset {
 	}
 
 	.details-content-column {
+		min-width: 0;
 		padding-top: 24px;
 	}
 }
